--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: MTGSquad
-description: MTGSquad's Shitty Site, Yes, Its Shitty, As Expected.
+description: MTGSquad is a young developer who thinks he can change the way, the worlds looks at the internet.
