--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 title: MTGSquad
 description: MTGSquad is a young developer who thinks he can change the way, the worlds looks at the internet.
+github:
+  repository_url: https://github.com/mtgsquad
